--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.9.2",
+    "@headlessui/react": "^2.2.0",
+    "firebase": "^11.1.0",
     "lucide": "^0.468.0",
     "lucide-react": "^0.468.0",
     "next": "15.1.0",
