--- a/package.json
+++ b/package.json
@@ -11,15 +11,23 @@
   "dependencies": {
     "@clerk/nextjs": "^6.9.2",
     "@headlessui/react": "^2.2.0",
+    "@react-email/components": "^0.0.31",
+    "adm-zip": "^0.5.16",
+    "axios": "^1.7.9",
     "firebase": "^11.1.0",
-    "lucide": "^0.468.0",
+    "init": "^0.1.2",
     "lucide-react": "^0.468.0",
     "next": "15.1.0",
+    "nodemailer": "^6.9.16",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-email": "^3.0.4",
+    "react-toastify": "^11.0.0",
+    "resend": "^4.0.1"
   },
   "devDependencies": {
     "@types/react": "19.0.1",
+    "autoprefixer": "^10.4.20",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "5.7.2"
