--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-email": "^3.0.4",
+    "react-router-dom": "^7.1.0",
     "react-toastify": "^11.0.0",
     "resend": "^4.0.1"
   },
